Atualização de Código.
Criado novas funcionalidades

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
     
     <footer>
             <div>
-                <h3>Copyright©2024.Todos os direitos reservados</h3> 
+                <h3>Copyright©2024.Todos os direitos reservados</h3>
+                <p class="contato">Entre em contato: j*****@gmail.com.br</p> 
             </div>     
     </footer>
-</body>
 
+    <script src="/buscador.js" ></script>
+</body>
 
 </html>
