Atualização de Código.
Verificar a chamado do arquivo buscador.js

--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
         </section>
     </main>
     
+    <div id="resultados"></div>
     <footer>
             <div>
                 <h3>Copyright©2024.Todos os direitos reservados</h3>
-                <p class="contato">Entre em contato: j*****@gmail.com.br</p> 
+                <!-- <p class="contato">Contato: j*****@gmail.com.br</p>  -->
             </div>     
     </footer>
 
     <script src="/buscador.js" ></script>
+    <script src="/base-de-receitas.js"></script>
 </body>
 
 </html>
