Atualização de codigo para exporta modulo

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             </div>     
     </footer>
 
-    <script src="/buscador.js" ></script>
-    <script src="/base-de-receitas.js"></script>
+    <script src="/buscador.js" type="module" ></script>
+    <script src="/dados.js"></script>
 </body>
 
 </html>
