--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </footer>
 
     <script src="/buscador.js" type="module" ></script>
-    <script src="/dados.js"></script>
+    <script src="/dados.js" type="module"></script>
 </body>
 
 </html>
