Atualização de Código.
Estilizado resultados.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sevillana&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -28,7 +29,7 @@
     <footer>
             <div>
                 <h3>Copyright©2024.Todos os direitos reservados</h3>
-                <!-- <p class="contato">Contato: j*****@gmail.com.br</p>  -->
+                <h3>Entre em contato: josiel********@gmail.com</h3>
             </div>     
     </footer>
 
