Atualização de Código.
Estilização de campos.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             <button class="pesquisar">BUSCAR</button>
         </section>
     </main>
-    
-    <div id="resultados"></div>
+
+    <div>
+        <div id="resultados"></div>
+    </div>
     <footer>
             <div>
                 <h3>Copyright©2024.Todos os direitos reservados</h3>
