Declaração correta de IDs e funções.

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 <body>
     <header>
         <div>
-            <h1>Receitas de Bolos</h1>
+            <h1 class="titulo">Receitas de Bolos</h1>
         </div>  
     </header>
 
-    <main>
+    <main id="principal">
         <section>
-            <input type="text" class="search-bar" placeholder="Digite sua busca">
-            <button class="pesquisar">BUSCAR</button>
+            <input id="campo-de-busca" type="text" class="search-bar" placeholder="Ex: Bolo de Chocolate, Bolo de Limão, etc.">
+            <button id="pesquisar" class="pesquisar">BUSCAR</button>
         </section>
     </main>
 
     <div>
-        <div id="resultados"></div>
+        <div class="resultados-da-pesquisa" id="resultados"></div>
     </div>
-    <footer>
+    <footer class="roda-pe">
             <div>
                 <h3>Copyright©2024.Todos os direitos reservados</h3>
                 <h3>Entre em contato: josiel********@gmail.com</h3>
