--- a/index.html
+++ b/index.html
@@ -4,44 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receitas de Bolos</title>
-    <link rel="icon" href="./image/icone.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sevillana&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="icon" href="./image/icone.png" type="image/x-icon">
 </head>
-<body>
-    <header>
-        <div>
-            <h1 class="titulo">Receitas de Bolos</h1>
-        </div>  
-    </header>
-
-    <main id="principal">
-        <section>
-            <input id="campo-de-busca" type="text" class="search-bar" placeholder="Ex: Bolo de Chocolate, Bolo de Limão, etc.">
-            <button id="pesquisar" class="pesquisar">BUSCAR</button>
-        </section>
-    </main>
-
-    <div>
-        <div class="resultados-da-pesquisa" id="resultados"></div>
-    </div>
-    <footer class="roda-pe">
+    <body>
+        <header>
             <div>
-                <h3>Copyright©2024.Todos os direitos reservados</h3>
-                <h3>Entre em contato: josiel********@gmail.com</h3>
-            </div>     
-    </footer>
+                <h1 class="titulo">Receitas de Bolos</h1>
+            </div>  
+        </header>
 
-    <script src="/buscador.js" type="module" ></script>
-    <script src="/dados.js" type="module"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-</body>
+        <div class="container" id="principal">
+            <div class="row">
+                <input class="col-sm-10" id="campo-de-busca" type="text" class="search-bar" placeholder="Ex: Bolo de Chocolate, Bolo de Limão, etc.">
+                <button class="col-sm-2" id="pesquisar" class="pesquisar">BUSCAR</button>
+            </div>
+            
+            <div>
+                <div class="resultados-da-pesquisa" id="resultados"></div>
+            </div>
+        </div>
 
+        <div class="roda-pe">
+            <h3>Copyright©2024.Todos os direitos reservados</h3>
+            <h3>Entre em contato: josiel********@gmail.com</h3>
+        </div>
+
+        <script src="/buscador.js" type="module" ></script>
+        <script src="/dados.js" type="module"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>    
+         
+    </body>
 </html>
