--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receitas de Bolos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link href="/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sevillana&display=swap" rel="stylesheet">
@@ -20,12 +20,17 @@
             </div>  
         </header>
 
-        <div class="container" id="principal">
+        <div class="container principal" id="principal">
             <div class="row">
-                <input class="col-sm-10" id="campo-de-busca" type="text" class="search-bar" placeholder="Ex: Bolo de Chocolate, Bolo de Limão, etc.">
-                <button class="col-sm-2" id="pesquisar" class="pesquisar">BUSCAR</button>
+                <div class="col-sm-10"> 
+                    <input class="search-bar" id="campo-de-busca" type="text" placeholder="Ex: Bolo de Chocolate, Bolo de Limão, etc.">
+                </div>
+
+                <div class="col-sm-2">
+                    <button class="pesquisar" id="pesquisar">BUSCAR</button>
+                </div>
             </div>
-            
+        
             <div>
                 <div class="resultados-da-pesquisa" id="resultados"></div>
             </div>
