--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Receitas de Bolos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="/style.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sevillana&display=swap" rel="stylesheet">
@@ -22,11 +23,11 @@
 
         <div class="container principal" id="principal">
             <div class="row">
-                <div class="col-sm-10"> 
+                <div class=" col-12 col-sm-10"> 
                     <input class="search-bar" id="campo-de-busca" type="text" placeholder="Ex: Bolo de Chocolate, Bolo de Limão, etc.">
                 </div>
 
-                <div class="col-sm-2">
+                <div class=" col-12 col-sm-2">
                     <button class="pesquisar" id="pesquisar">BUSCAR</button>
                 </div>
             </div>
