--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Receitas de Bolos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="/style.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sevillana&display=swap" rel="stylesheet">
@@ -14,37 +13,43 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
     <link rel="icon" href="./image/icone.png" type="image/x-icon">
 </head>
-    <body>
-        <header>
-            <div>
+<body>
+    <header class="container-fluid"> 
+        <div class="row">
+            <div class="col-12 text-center"> 
                 <h1 class="titulo">Receitas de Bolos</h1>
-            </div>  
-        </header>
-
-        <div class="container principal" id="principal">
-            <div class="row">
-                <div class=" col-12 col-sm-10"> 
-                    <input class="search-bar" id="campo-de-busca" type="text" placeholder="Ex: Bolo de Chocolate, Bolo de Limão, etc.">
-                </div>
-
-                <div class=" col-12 col-sm-2">
-                    <button class="pesquisar" id="pesquisar">BUSCAR</button>
-                </div>
             </div>
-        
-            <div>
+        </div>
+    </header>
+
+    <div class="container principal" id="principal">
+        <div class="row d-flex justify-content-between">
+            <div class="col-12 col-sm-10"> 
+                <input class="search-bar form-control" id="campo-de-busca" type="text" placeholder="Ex: Bolo de Chocolate, Bolo de Limão, etc.">
+            </div>
+            <div class="col-12 col-sm-2">
+                <button class="pesquisar btn btn-primary" id="pesquisar">BUSCAR</button>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12">
                 <div class="resultados-da-pesquisa" id="resultados"></div>
             </div>
         </div>
+    </div>
 
-        <div class="roda-pe">
-            <h3>Copyright©2024.Todos os direitos reservados</h3>
-            <h3>Entre em contato: josiel********@gmail.com</h3>
+    <footer class="roda-pe container-fluid"> 
+        <div class="row">
+            <div class="col-12 text-center">
+                <h3>Copyright©2024.Todos os direitos reservados</h3>
+                <h3>Entre em contato: josiel********@gmail.com</h3>
+            </div>
         </div>
+    </footer>
 
-        <script src="/buscador.js" type="module" ></script>
-        <script src="/dados.js" type="module"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-         
-    </body>
+    <script src="/buscador.js" type="module" ></script>
+    <script src="/dados.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+</body>
 </html>
