fix: style adjusments

--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
     </header>
 
     <div class="container principal" id="principal">
-        <div class="row d-flex justify-content-between">
-            <div class="col-12 col-sm-10"> 
+            <div class="input-group mb-3">
                 <input class="search-bar form-control" id="campo-de-busca" type="text" placeholder="Ex: Bolo de Chocolate, Bolo de Limão, etc.">
-            </div>
-            <div class="col-12 col-sm-2">
-                <button class="pesquisar btn btn-primary" id="pesquisar">BUSCAR</button>
+                <div class="input-group-append">
+                    <button class="pesquisar btn btn-primary" id="pesquisar">BUSCAR</button>
+                </div>
             </div>
         </div>
 
