--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h3>Copyright©2024.Todos os direitos reservados</h3>
-                <h3>Entre em contato: josiel********@gmail.com</h3>
+                <h3>Entre em contato: josielsoares295@gmail.com</h3>
             </div>
         </div>
     </footer>
